# TRADING-AI

./: .gitignore  .pre-commit-config.yaml  AMATIS_ARCHITECTURE.md  AUDIT_SUMMARY.md  BACKTEST_ENGINE_GUIDE.md  CRITICAL_PATCHES_GUIDE.md  DEPLOYMENT_READY.md  FINAL_VALIDATION_REPORT.md  GITHUB_SETUP.md  LICENSE  PATCH_IMPLEMENTATION_REPORT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SYSTEM_AUDIT_REPORT.md  SYSTEM_OVERVIEW.md  env.template  pyproject.toml  signal_validation_clean_results.json  signal_validation_final_results.json  signal_validation_results.json  smoke_test.py  source_optimization_report.json  test_agent.py  validation_test.py
.github/workflows/: ci.yml  tests.yml
data/: state.json  trade_memory.json
docs/: POST_RELEASE_BACKLOG.md  ROADMAP_v1.1.md  architecture_analysis.md
docs/archive/: AGENT_SUMMARY.md  AMATIS_ARCHITECTURAL_DISCIPLINE.md  AMATIS_ARCHITECTURAL_ENFORCEMENT_V2.md  AMATIS_ARCHITECTURE_FREEZE.md  AMATIS_ARCHITECTURE_FREEZE_AUDIT.md  AMATIS_CODE_QUALITY.md  AMATIS_DETERMINISM_PROOF.md  AMATIS_DOMAIN_MODEL_AUDIT.md  AMATIS_EVENT_BUS_PURIFICATION.md  AMATIS_EVENT_CONTRACTS.md  AMATIS_EXCEPTION_HARDENING.md  AMATIS_FAILURE_DISCIPLINE_V2.md  AMATIS_FOUNDATION_LOCKDOWN.md  AMATIS_HARDENING_PLAN.md  AMATIS_HARDENING_REPORT.md  AMATIS_LONGRUN_VALIDATION.md  AMATIS_MEMORY_LIFECYCLE_REPORT.md  AMATIS_OBSERVABILITY_V2.md  AMATIS_OMS_PURITY_REPORT.md  AMATIS_PHASE1.md  AMATIS_PHASE2.md  AMATIS_PHASE2_5.md  AMATIS_PRODUCTION_AUDIT.md  AMATIS_PURITY_CERTIFICATION.md  AMATIS_SECURITY_AUDIT.md  AMATIS_SIMULATION_VALIDATION_REPORT.md  AMATIS_STATIC_ANALYSIS_REPORT.md  AMATIS_TECHNICAL_AUDIT.md  AMATIS_TYPE_SYSTEM_PURIFICATION.md  AMATIS_TYPE_SYSTEM_REPORT.md  AMATIS_VERIFICATION_AUDIT.md  CODEBASE_INVENTORY.md  FINAL_FOUNDATION_CERTIFICATION.md  PHASE_2_99_FINAL_VERDICT.md  RUNTIME_CONVERGENCE_PLAN.md
news-hunter/: alert_router.py  backtest_engine.py  broker_sender.py  config.py  duplicate_filter.py  execution_bridge.py  fake_news_validator.py  god_core.py  news_engine.py  performance_analytics.py  portfolio_brain.py  regime_detector.py  risk_guardian.py  rss_sandbox.py  self_learning_optimizer.py  signal_engine.py  source_registry.py  state_manager.py  validation_memory.py
src/amatix/: __init__.py  app.py  interfaces.py
src/amatix/backtesting/: __init__.py  engine.py
src/amatix/chaos/: __init__.py  engine.py  injectors.py
src/amatix/contracts/: __init__.py  events.py
src/amatix/core/: __init__.py  circuit_breaker.py  config.py  event_bus_v2.py  event_models.py  exceptions.py  memory_lifecycle.py  observability.py  orchestrator.py
src/amatix/data/: __init__.py
src/amatix/data/market/: __init__.py  cache.py  models.py  normalizer.py  stream_manager.py
src/amatix/data/news/: __init__.py  collector.py  deduplicator.py  models.py  sources.py  validator.py
src/amatix/execution/: __init__.py
src/amatix/execution/oms/: __init__.py  order_manager_hardened.py  state_machine.py
src/amatix/memory/: __init__.py  decision_journal.py
src/amatix/observability/: metrics.py
src/amatix/portfolio/: __init__.py  manager.py
src/amatix/replay/: __init__.py  engine.py
src/amatix/risk/: __init__.py  engine.py  models.py
src/amatix/safety/: __init__.py  kill_switch.py
src/amatix/signals/: __init__.py  models.py  pipeline.py
src/amatix/simulation/: __init__.py  analytics.py  chaos_replay.py  determinism.py  execution_simulator.py  market_regimes.py  replay_engine.py  validation_runner.py
src/amatix/storage/: __init__.py
src/trading_ai/agents/: __init__.py  institutional_signal_generator.py  institutional_signal_generator_fixed.py  multi_agent_system.py
src/trading_ai/backtest/: __init__.py  backtest_engine.py  performance_analyzer.py  trade_simulator.py
src/trading_ai/brain/: __init__.py  decision_engine.py  llm_client.py  llm_sentiment_analyzer.py  market_context.py
src/trading_ai/core/: orchestrator.py
src/trading_ai/debug/: __init__.py  debug_logger.py  validation_engine.py
src/trading_ai/events/: event_classifier.py  impact_model.py
src/trading_ai/execution/: __init__.py  exchange.py  execution_engine.py  order.py  position_manager.py  simple_execution_engine.py
src/trading_ai/infrastructure/: optimized_sources.py
src/trading_ai/learning/: __init__.py  adaptive_weights.py  experience_replay.py  learning_engine.py  performance_analyzer.py  trade_learner.py
src/trading_ai/market/: __init__.py  data_provider.py  market_microstructure.py  models.py  technical_indicators.py
src/trading_ai/memory/: __init__.py  trade_memory.py
src/trading_ai/performance/: alpha_tracker.py
src/trading_ai/portfolio/: __init__.py  portfolio.py  position.py  position_manager.py  risk_manager.py
src/trading_ai/signals/: __init__.py  enhanced_signal_generator.py  multi_factor_model.py  signal_scorer.py
src/trading_ai/strategies/: __init__.py  base_strategy.py  freqtrade_strategies.py  hybrid_strategy.py  market_data_pipeline.py  news_sentiment_strategy.py  news_strategy.py  strategy_interface.py  strategy_manager.py  technical_strategy.py
tests/: __init__.py  conftest.py  test_decision_system.py  test_duplicate_debug.py  test_duplicate_debug_detailed.py  test_final_verification.py  test_full_source_validation.py  test_institutional_signals.py  test_keyword_matching.py  test_long_run_stability.py  test_pipeline_validation.py  test_regex_debug.py  test_rss_audit.py  test_signal_generation_debug.py  test_signal_validation.py  test_signal_validation_clean.py  test_signal_validation_final.py  test_source_expansion.py  test_source_scoring.py  test_source_simple.py  test_source_validation_final.py  test_state_safety.py  test_strategy_architecture.py  test_system_validation.py
tests/integration/: conftest.py  test_full_flow.py
tests/performance/: test_benchmarks.py
tests/simulation/: test_validation.py
tests/torture/: test_concurrency_extreme.py  test_oms_hardened.py
tests/unit/: test_event_bus.py
tests/unit/data/: test_cache.py  test_market_data_models.py  test_normalizer.py
tests/unit/signals/: test_momentum_engine.py
(+27 files in other folders)
